# trix

./: .gitignore  Cargo.toml  Readme.md  cleanup_exabgp.sh  cpu-monitor.py  log4rs.yml  start_iperf_client.sh  start_iperf_server.sh  visualize_accuracy.py  wait_for_no_output.sh
examples/: count_series_of_fw_states.rs  eval_benchmark.rs  eval_reachability_from_prober.rs  extract_reaction_times.rs  fix_event_start.rs  generate_path_scenarios.rs  generate_scenarios.rs  generate_topology_scenarios.rs  path.rs  path_cisco_announce_e2.rs  path_cisco_update_e1.rs  path_cisco_withdraw_e2.rs  plot_reaction_times.rs  predictable.rs  process_pcaps_sorted.rs  process_reachability_from_prober.rs  run_benchmark_delayer.rs  run_scenarios_cisco.rs  run_simulator.rs  serialize.rs  split_by_delays.rs  visualize_reachability_violation.rs  visualize_reachability_violation_from_prober.rs
router-lab-config/: cisco-nexus1.toml  cisco-nexus10.toml  cisco-nexus11.toml  cisco-nexus12.toml  cisco-nexus13.toml  cisco-nexus2.toml  cisco-nexus3.toml  cisco-nexus4.toml  cisco-nexus5.toml  cisco-nexus6.toml  cisco-nexus7.toml  cisco-nexus8.toml  cisco-nexus9.toml  config.toml  lab-vdc111.toml  lab-vdc112.toml  lab-vdc113.toml  lab-vdc114.toml  lab-vdc121.toml  lab-vdc122.toml  lab-vdc123.toml  lab-vdc124.toml  lab-vdc131.toml  lab-vdc132.toml  lab-vdc133.toml  lab-vdc134.toml  routers.toml  tofino_controller.py
src/: bgp_parser.rs  collect_hw_data.rs  evaluate.rs  evaluate_running_time.rs  event.rs  extract_bgp_updates.rs  fib_queuing.rs  lib.rs  main.rs  new_prober_analysis.rs  plot.rs  process_pcaps.rs  records.rs  routing_inputs.rs  timing_model.rs  topology.rs  util.rs  visualize_bgp_updates.rs
src/analyzer/: analyzer_script.rs  bgp_log_parser.rs  cpu_monitor.rs  ipfib_log_parser.rs  log_parser.rs  mod.rs  prefix.rs  result.rs  ufdm_log_parser.rs  urib_log_parser.rs
src/experiments/: experiment_serde.rs  list_custom_topologies.rs  list_experiments.rs  list_path_scenarios.rs  list_scenarios.rs  mod.rs  runner.rs  sample.rs  scenarios.rs
src/test/: hard_waypoints.rs  loop_free.rs  mod.rs  waypoints.rs
src/test/pcap_processing/Path_11/ExtAtEnds_FullMesh_Prefix100000_PhysicalExternalWithdrawAllPrefixesAtR0_Delay0/: analyze_monitor_PhysWithdrawRoutingInputs_MultiPrefix_2024-09-12_14-22-02.sh  cisco_analyzer.csv  hardware_mapping_2024-09-12_14-27-19.json  prober_results_2024-09-12_14-24-06.json  prober_results_2024-09-12_14-25-42.json  prober_results_2024-09-12_14-27-19.json
src/test/pcap_processing/Path_11/ExtAtEnds_FullMesh_Prefix100000_PhysicalExternalWithdrawAllPrefixesAtR0_Delay0/captures/event_2024-09-12_14-26-27/: r0-100_0_0_0_24-100_0_0_1-r0_ext.csv
src/time_series_of_fw_updates/: bgp.rs  bgp_messages.rs  fib_delay.rs  ipfib.rs  mod.rs  sim_model.rs  ufdm.rs  urib.rs
src/transient_specification/: mod.rs  path.rs  policy.rs
timing-model/: data.csv
trix-utils/: .gitlab-ci.yml  Cargo.toml
trix-utils/src/: bgp_utils.rs  lib.rs  main.rs  other.rs  pcap_utils.rs  reaction_times.rs
trix-utils/src/serde/: generic_hashmap.rs  mod.rs
