[package]
name = "trix"
version = "0.1.0"
edition = "2021"
default-run = "main"

[lib]
name = "trix"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "collect_hw_data"
path = "src/collect_hw_data.rs"

[[bin]]
name = "process_pcaps"
path = "src/process_pcaps.rs"

[[bin]]
name = "plot"
path = "src/plot.rs"

[[bin]]
name = "extract_bgp_updates"
path = "src/extract_bgp_updates.rs"

[[bin]]
name = "evaluate"
path = "src/evaluate.rs"

[[bin]]
name = "new_prober_analysis"
path = "src/new_prober_analysis.rs"

[[bin]]
name = "evaluate_running_time"
path = "src/evaluate_running_time.rs"

[features]
# used in processing of pcaps to only compute violation times for new samples
default = ["incremental", "all-fw-properties"]
incremental = []
all-fw-properties = []
packet_equivalence_class = []


[dependencies]
bgpsim = { version = "0.17.10", features = ["export", "topology_zoo", "rand", "rand_queue"] }
router-lab = { git = "https://github.com/nsg-ethz/router-lab", tag = "0.8.0" }
trix-utils = { path = "trix-utils" }
async-scoped = { version = "0.7.1", features = ["use-tokio"] }
bitvec = "1.0.0"
chrono = "0.4.22"
clap = { version = "4.5.4", features = ["derive"] }
crossbeam-utils = "0.8.11"
csv = "1.1.6"
geoutils = { version = "0.5.1", features = ["serde"] }
glob = "0.3.1"
human-sort = "0.2.2"
indicatif = { version = "0.18.0", features = ["rayon"] }
ipnet = "2.7.1"
itertools = "0.10.3"
lazy_static = "1.4.0"
log = "0.4.17"
log4rs = { version = "1.3.0", features = ["console_appender", "rolling_file_appender", "fixed_window_roller", "size_trigger", "pattern_encoder"] }
mac_address = { version = "1.1.5", features = ["serde"] }
num_cpus = "1.13.1"
ordered-float = "3.4.0"
pcap-file = "2.0.0"
plotly = "0.10.0"
pnet = "0.33.0"
pnet_packet = "0.33.0"
pretty_env_logger = "0.4.0"
priority-queue = "1.3.1"
rand = "0.8.5"
rand_distr = "0.4"
rayon = "1.7.0"
regex = "1.7.0"
serde = {version = "1.0.213", features = ["derive"] }
serde_json = "1.0.94"
statrs = "0.16.0"
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26"
termion = "1.5.6"
thiserror = "1.0.32"
time = { version = "0.3.17", features = ["formatting", "local-offset"] }
tokio = { version = "1.21.2", features = ["process", "io-util", "time", "rt", "rt-multi-thread", "sync", "macros", "signal"] }
etherparse = "0.16.0"
bgpkit-parser = { version = "0.10.11", default-features = false, features = ["parser"] }
bytes = "1.8.0"
byteorder = "1.5.0"
flate2 = "1.0.35"
range-set = "0.0.11"
anyhow = "1.0.93"
async-trait = "0.1.83"
indicatif-log-bridge = "0.2.3"
